--- a/WebContent/styles.css
+++ b/WebContent/styles.css
@@ -2,14 +2,14 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background:#fdfdfd;
+    background:#fcfcfc;
 }
 
 #content {
 	background:white;
 	text-align: center;
 	width:70%;
-	margin:10% auto;
+	margin:20px auto;
 	padding:20px;
 	top: 50%;
 	left: 50%;
@@ -18,6 +18,8 @@ body {
 	-webkit-box-shadow: 10px 10px 0px 0px #f0f0f0; 
 	box-shadow: 10px 10px 0px 0px #f0f0f0;
 }
+
+#content .form{text-align:left;}
 
 input[type="text"], input[type="password"] {
     border: 1px solid #e8e8e8;
