--- a/WebContent/styles.css
+++ b/WebContent/styles.css
@@ -21,7 +21,7 @@ body {
 
 #content .form{text-align:left;}
 
-input[type="text"], input[type="password"] {
+input[type="text"], input[type="password"],  input[type="number"] {
     border: 1px solid #e8e8e8;
 	border-radius:15px;
     padding: 10px;
@@ -30,7 +30,7 @@ input[type="text"], input[type="password"] {
 
 .btn {
 	width:20%;
-	margin:20px;
+	margin:20px 0;
     padding: 10px;
     background: #fafafa;
     border: 1px solid #e8e8e8;
