--- a/WebContent/styles.css
+++ b/WebContent/styles.css
@@ -28,6 +28,9 @@ input[type="text"], input[type="password"],  input[type="number"] {
     margin:0 20px 20px 20px;
 }
 
+#back {	margin:20px auto; max-width:300px; text-align:center;}
+#back a{text-decoration: none; color:black;}
+
 .btn {
 	width:20%;
 	margin:20px 0;
