--- a/WebContent/styles.css
+++ b/WebContent/styles.css
@@ -32,7 +32,7 @@ input[type="text"], input[type="password"],  input[type="number"] {
 #back a{text-decoration: none; color:black;}
 
 .btn {
-	width:20%;
+	min-width:20%;
 	margin:20px 0;
     padding: 10px;
     background: #fafafa;
